Добавлена возможность просмотра грида в виде дерева

--- a/resources/assets/less/grid.less
+++ b/resources/assets/less/grid.less
@@ -18,6 +18,11 @@
       position: absolute;
       max-height: 100%;
 
+      &.inline {
+        position: inherit;
+        display: table !important;
+      }
+
       th[grid-column] {
         text-align: center;
       }
