Добавлен поиск по дереву

--- a/resources/assets/less/grid.less
+++ b/resources/assets/less/grid.less
@@ -23,9 +23,45 @@
         display: table !important;
       }
 
+      .icon-hive-navigation {
+        color: #f8ac59;
+      }
+
+      thead {
+        position: sticky;
+        top: 0px;
+      }
+
+      tr.search-result td {
+        background-color: #fcf8e3;
+        animation: none;
+      }
+
+      .icon-left-outline {
+        display: none;
+        margin-left: -17px;
+        width: 17px;
+        padding-right: 3px;
+      }
+
+      .align-items-center {
+        align-items: center;
+      }
+
+      tr.current {
+        .task-title-column {
+          font-weight: 700;
+        }
+
+        .icon-left-outline {
+          display: block;
+        }
+      }
+
       th[grid-column] {
         text-align: center;
       }
+
 
       td {
         vertical-align: middle !important;
