--- a/resources/assets/less/grid.less
+++ b/resources/assets/less/grid.less
@@ -2,8 +2,8 @@
 
 .grid {
   .column-loop (@i) when (@i > 0) {
-    .column-hide-@{i} > table > tr > td:nth-child(@{i}):not([colspan]),
-    .column-hide-@{i} > table > tr > th:nth-child(@{i}) {
+    .column-hide-@{i} table:not(.column-hider-exclude) tr th:nth-child(@{i}):not([colspan]),
+    .column-hide-@{i} table:not(.column-hider-exclude) tr td:nth-child(@{i}) {
       display: none;
     }
     .column-loop(@i - 1);
