Добавлено отображение кол-ва строк в пагинации

--- a/resources/assets/less/grid.less
+++ b/resources/assets/less/grid.less
@@ -107,6 +107,10 @@
     }
   }
 
+  .pagination-counts {
+    margin-left: 10px;
+  }
+
   .grid-btn {
     font-size: 1.1em;
     padding: 4px 10px;
@@ -282,6 +286,7 @@
     }
   }
 }
+
 
 .animate-on-create td {
   animation: colorchange 2s;
